--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.5",
     "express": "^4.18.1",
     "sequelize": "^6.24.0",
     "sqlite3": "^5.1.2"
