--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.5",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "sequelize": "^6.24.0",
     "sqlite3": "^5.1.2"
   }
